--- a/stylesheets/ep-curation.css
+++ b/stylesheets/ep-curation.css
@@ -947,6 +947,7 @@ padding-right: 8px;
     display: block;
     width: 100%;
     height: 100%;
+    background: url(../images/black_box.png) no-repeat 0 0;
 }
 
 #epcurate-curation #cur-edit .effect-container p.effect-demo span em {
@@ -1124,15 +1125,14 @@ padding-right: 8px;
 	line-height: 28px;
 }
 
-#epcurate-curation #cur-edit .edit-title         .btn-container .btn-edit,
-#epcurate-curation #cur-edit .edit-title         .btn-container .btn-del,
+#epcurate-curation #cur-edit .edit-title                 .btn-container .btn-edit,
+#epcurate-curation #cur-edit .edit-title.disable .btn-container .btn-del,
 #epcurate-curation #cur-edit .edit-title.disable .btn-container .btn-cancel,
 #epcurate-curation #cur-edit .edit-title.disable .btn-container .btn-done {
 	display: none;
 }
 
-#epcurate-curation #cur-edit .edit-title.disable .btn-container .btn-edit,
-#epcurate-curation #cur-edit .edit-title.disable .btn-container .btn-del {
+#epcurate-curation #cur-edit .edit-title.disable .btn-container .btn-edit {
 	display: block;
 }
 
@@ -2032,7 +2032,7 @@ padding-right: 8px;
 
 #storyboard .storyboard-list ul li p.title a.end-title .tip {
     left: 40px;
-    background-position: 72px top;
+    background-position: 57px top;
 }
 
 #storyboard .storyboard-list ul li p.title a.begin-title .tip .tip-left,
@@ -2144,7 +2144,7 @@ padding-right: 8px;
 }
 
 #storyboard .storyboard-list ul li .hover-func a.end-title .tip {
-    left: -60px;
+    left: -52px;
     background-position: 53px top;
 }
 
