update from DS (bug fix)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@3997 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/lightbox.css
+++ b/stylesheets/lightbox.css
@@ -459,7 +459,7 @@
 	width: 707px;
 	height: 398px;
 }
-
+/*
 #lightbox-play-video .video-wrap #video-control,
 #lightbox-play-audio .video-wrap #video-control {
 	clear: both;
@@ -656,7 +656,7 @@
 #lightbox-play-audio .btns a {
     width: 237px;
 }
-
+*/
 /**
 *
 * =overlay-l
