--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -12,22 +12,75 @@
 
 #channel-list {
 	padding-top: 2px;
-    border-right: 1px solid #A4A09B;
-    border-left: 1px solid #A4A09B;
-    background: url(../images/bg_divider.png) repeat-x 0 top;
 }
 
 #channel-list li {
     position: relative;
+    overflow: hidden;
+    margin-top: -2px;
+}
+
+#channel-list.ui-sortable li:hover {
+    background: url(../images/bg_main2.png) repeat 2px 0;
+    cursor: move;
+}
+
+#channel-list.ui-sortable.ui-sortable-disabled li:hover {
+    background: none;
+    cursor: default;
+}
+
+#channel-list li .container {
+    background: url(../images/bg_divider.png) repeat-x 0 0;
+}
+
+#channel-list li .container-right {
+    background: url(../images/divider_vertical.png) repeat-y right 0;
+}
+
+#channel-list li .container-bottom {
     background: url(../images/bg_divider.png) repeat-x 0 bottom;
 }
 
-#channel-list li.ui-sortable-helper {
-    border: 1px solid #a4a09b;
+#channel-list li .container-left {
+    height: 101px;
+    padding: 2px 0;
+    background: url(../images/divider_vertical.png) repeat-y 0 0;
 }
 
-#channel-list li:hover {
-    background: url(../images/bg_main2.png) repeat -210px 0;
+#channel-list li .wrap {
+    float: left;
+    background: url(../images/divider_vertical.png) repeat-y right 0;
+}
+
+#channel-list li p.drag {
+    position: absolute;
+    top: 2px;
+    right: 2px;
+    width: 34px;
+    height: 101px;
+    background: url(../images/icon_move.png) no-repeat center center;
+    text-indent: -100000px;
+}
+
+#channel-list.ui-sortable li p.drag {
+    background: #e9e9e9 url(../images/icon_move.png) no-repeat center center;
+}
+
+#channel-list.ui-sortable-disabled.ui-sortable li p.drag {
+    background: transparent url(../images/icon_move_disable.png) no-repeat center center;
+}
+
+#channel-list.ui-sortable li:hover p.drag,
+#channel-list.ui-sortable li             p.drag:hover {
+    background-color: #fbfbfb;
+    cursor: move;
+}
+
+#channel-list.ui-sortable-disabled li:hover p.drag,
+#channel-list.ui-sortable-disabled li             p.drag:hover {
+    background-color: transparent;
+    cursor: default;
 }
 
 /* =photo-list
@@ -38,6 +91,10 @@
     float: left;
     width: 232px;
     padding: 7px 4px 4px 8px;
+}
+
+#channel-list li .photo-list a {
+    text-decoration: none;
 }
 
 #channel-list li .photo-list a span {
@@ -155,7 +212,7 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li {
     position: relative;
     float: left;
-    margin-right: 8px;
+    margin: 0 8px 0 0;
 }
 
 #channel-list li .func-wrap .func-btns .btn-wrap ul li:hover {
@@ -298,25 +355,6 @@
     display: block;
 }
 
-#channel-list li .func-wrap p.drag {
-    position: absolute;
-    top: 0;
-    right: 0;
-    width: 34px;
-    height: 101px;
-    background: #ddd url(../images/icon_move.png) no-repeat center center;
-    text-indent: -100000px;
-}
-
-#channel-list li .func-wrap p.drag {
-    background: #dedede url(../images/icon_move.png) no-repeat center center;
-}
-
-#channel-list li.ui-sortable-helper .func-wrap p.drag,
-#channel-list li .func-wrap p.drag:hover {
-    background-color: #f8f8f8;
-}
-
 /**
 *
 * =settingForm
@@ -398,6 +436,7 @@
 }
 
 #content-main-wrap form .fminput .fmfield p.textarea span .textarea {
+    overflow: auto;
     height: 53px;
     margin-top: 2px;
     padding: 3px;
