--- a/stylesheets/playback.css
+++ b/stylesheets/playback.css
@@ -60,7 +60,29 @@
     background: url(../images/btn_knob.png) 0 0 no-repeat;
     cursor: pointer;
 }
+/*
+#play-dragger {
+    position: absolute;
+    top: 7px;
+    left: 0;
+    z-index: 35;
+    width: 100%;
+    width: 590px;
+    height: 8px;
+}
 
+#play-dragger .ui-slider-handle,
+#play-dragger .jScrollPaneDrag {
+    position: absolute;
+    top: -5px;
+    left: 0;
+    z-index: 35;
+    width: 18px;
+    height: 18px;
+    background: url(../images/btn_knob.png) 0 0 no-repeat;
+    cursor: pointer;
+}
+*/
 #video-control ul {
     position: relative;
     overflow: hidden;
@@ -134,6 +156,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    cursor: pointer;
 }
 
 #volume-bar .volume {
@@ -142,6 +165,7 @@
     height: 4px;
     margin-top: 3px;
     background-color: #f00;
+    cursor: pointer;
 }
 
 #volume-dragger {
