update from DS (bug fix)
git-svn-id: http://everest.teltel.com:8080/repos/misc/9x9dev/trunk/nncms/src/main/webapp@4024 a0a5f996-2bb4-401c-8778-395c3c01700f

--- a/stylesheets/channel.css
+++ b/stylesheets/channel.css
@@ -212,6 +212,7 @@
 #channel-list li .func-wrap .func-btns .btn-wrap ul li {
     position: relative;
     float: left;
+    overflow: visible;
     margin: 0 8px 0 0;
 }
 
