--- a/stylesheets/ep-curation.css
+++ b/stylesheets/ep-curation.css
@@ -848,7 +848,7 @@ padding-right: 8px;
 	width: 95px;
 	height: 59px;
 	margin: 0 18px 0 0;
-	background-color: #000;
+    background: #000 url(../images/black_box.png) no-repeat 0 0;
 	line-height: 59px;
 	text-align: center;
     cursor: pointer;
@@ -858,7 +858,6 @@ padding-right: 8px;
     display: block;
     width: 100%;
     height: 100%;
-    background: url(../images/black_box.png) no-repeat 0 0;
 }
 
 #epcurate-curation #cur-edit .effect-container p.effect-demo span em {
